# alizarin

./: .gitignore  .npmignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Cargo.workspace.toml  FINAL_TEST_STATUS.md  MIGRATION_PLAN.md  README.md  TEST_STATUS.md  VERSION  WASM_PYTHON_API_ALIGNMENT.md  eslint.config.mjs  index.html  package-lock.json  package.json  ruff.toml  tsconfig.json  tsconfig.typedoc.json  typedoc.json  validate-graphs.mjs  vite.config.js  vitest.config.js  vitest.napi.config.js
.claude/: settings.local.json
benchmarks/: backend.bench.ts  compare.mjs  vitest.bench.napi.config.js  vitest.bench.wasm.config.js
crates/alizarin-clm-core/: Cargo.toml
crates/alizarin-clm-core/src/: lib.rs
crates/alizarin-core/: Cargo.toml  WASM_WRAPPER_EXAMPLE.rs
crates/alizarin-core/src/: card_traversal.rs  csv_business_data_loader.rs  csv_model_loader.rs  exporter.rs  extension_type_registry.rs  graph.rs  graph_model_access.rs  graph_mutator.rs  instance_wrapper_core.rs  interner.rs  json_conversion.rs  label_resolution.rs  lib.rs  loader.rs  node_config.rs  ontology.rs  path_resolution.rs  permissions.rs  pseudo_node.rs  pseudo_node_lite.rs  pseudo_value_core.rs  rdm_cache.rs  rdm_namespace.rs  registry.rs  skos.rs  string_utils.rs  tile_source.rs  type_coercion.rs
crates/alizarin-core/src/graph/: card_index.rs  cards.rs  descriptors.rs  meta.rs  mod.rs  nodes.rs  prune.rs  resources.rs  serde_helpers.rs  static_graph.rs  tile.rs  translatable.rs
crates/alizarin-core/src/type_coercion/: config.rs  domain.rs  helpers.rs  mod.rs  rdm.rs  resources.rs  result.rs  scalars.rs  strings.rs
crates/alizarin-core/src/type_serialization/: domain.rs  mod.rs  options.rs  rdm.rs  resources.rs  scalars.rs  strings.rs
crates/alizarin-core/tests/: matching_entries_test.rs  semantic_children_test.rs
crates/alizarin-explorer/: Cargo.toml
crates/alizarin-explorer/src/: app.rs  main.rs  ui.rs
crates/alizarin-napi/: Cargo.toml  index.d.ts  index.js  package-lock.json  package.json
crates/alizarin-napi/__test__/: index.mjs
crates/alizarin-napi/src/: instance_wrapper_napi.rs  lib.rs
crates/alizarin-python/: CREATE_REFACTOR_ANALYSIS.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  TEST_PORTING_STATUS.md  pyproject.toml  pytest.ini
crates/alizarin-python/examples/: json_conversion.py
crates/alizarin-python/python/alizarin/: __init__.py  card_view_model.py  cli.py  graph_manager.py  instance_wrapper.py  model_wrapper.py  node_config.py  pseudos.py  semantic.py  static_types.py  view_models.py
crates/alizarin-python/src/: graph_mutator_py.rs  instance_wrapper_py.rs  lib.rs  node_config.rs  node_config_py.rs  pseudo_value.rs  pseudo_value_py.rs  python_json.rs  rdm_cache.rs  rdm_cache_py.rs  skos_py.rs  type_coercion.rs  type_coercion_py.rs
crates/alizarin-python/tests/: README_CLM_COLLECTION.md  README_RDM_COLLECTION.md  test_attr_promise.py  test_batch_trees_minimal.py  test_conversion.py  test_create_graph_mutation.py  test_cross_model_traversal.py  test_graph_manager.py  test_matching_entries.py  test_prune_graph.py  test_rdm_collection.py  test_regression.py  test_resources.py  test_semantic_children.py  test_static_types.py  test_type_coercion.py  test_view_models.py  test_wkrm.py
crates/alizarin-wasm/: Cargo.toml
crates/alizarin-wasm/src/: batch_conversion.rs  exporter_wasm.rs  extension_registry.rs  graph.rs  graph_mutator_wasm.rs  instance_wrapper.rs  json_conversion.rs  label_resolution_wasm.rs  lib.rs  model_wrapper.rs  node_config_wasm.rs  pseudo_value.rs  pseudos.rs  rdm_cache_wasm.rs  rdm_namespace_wasm.rs  skos_wasm.rs  tracing.rs  type_coercion_wasm.rs  utils.rs
docs/: api.mdx  architecture.mdx  background.mdx  graphs.mdx  index.mdx  installation.mdx  llm-reference.mdx  meta.json  mutations.mdx  prebuild.mdx  quickstart.mdx
example/: app.js  session.js  utils.js
ext/filelist/wasm/: Cargo.toml
ext/filelist/wasm/src/: lib.rs
ext/python/alizarin-clm/: Cargo.toml  pyproject.toml
ext/python/alizarin-clm/python/alizarin_clm/: __init__.py  static_types.py  view_models.py
ext/python/alizarin-clm/src/: lib.rs  mutations.rs
ext/python/alizarin-clm/tests/: __init__.py  conftest.py  test_clm_collection.py  test_reference.py  test_reference_change_collection.py
ext/python/alizarin-clm/tests/data/graphs/resource_models/: Person.json
ext/python/alizarin-clm/tests/data/reference_data/: PLACEHOLDER(2).xml
ext/python/alizarin-filelist/: Cargo.toml  pyproject.toml
ext/python/alizarin-filelist/python/alizarin_filelist/: __init__.py  static_types.py
ext/python/alizarin-filelist/src/: lib.rs
ext/python/alizarin-filelist/tests/: test_filelist.py
js/: _wasm.ts  backend.ts  cards.ts  client.ts  collectionMutator.ts  csvModelLoader.ts  full.ts  graphManager.ts  interfaces.ts  main.ts  nodeConfig.ts  pseudos.ts  rdm.ts  renderers.ts  semantic.ts  static-types.ts  staticStore.ts  utils.ts  viewModels.ts  wasmTiming.ts
pkg/: Cargo.toml
scripts/: create-inline.mjs  sync-version.sh  validate-model-csvs.mjs
src/: client.ts  graph.rs  graphManager.ts  instance_wrapper.rs  instance_wrapper.rs.bak  interfaces.ts  json_conversion.rs  lib.rs  main.ts  model_wrapper.rs  nodeConfig.ts  node_config_wasm.rs  pseudo_value.rs  pseudos.rs  pseudos.ts  rdm.ts  renderers.ts  skos.rs  static-types.ts  staticStore.ts  tracing.rs  utils.ts  viewModels.ts  wasm_wrappers.rs
tests/: apiTest.d.ts  apiTest.js  apiTest.ts  buildResourceDescriptors.test.ts  client.test.ts  coreTest.d.ts  coreTest.ts  ensureNodegroup-edge-cases.test.ts  graph-types.test.ts  graph-wasm.test.ts  graphManager.test.ts  graphs.test.ts  matching_entries_test.rs  prune_graph_test.rs  pseudo_value_integration.rs  pseudos.test.ts  rdm.test.ts  resources.test.js  resources.test.ts  root-level-nodes.test.ts  semantic_children_test.rs  setupVitest.js  setupVitestNapi.js  setupVitestNapiWithWasm.js  static-types.test.ts  type-coercion.test.ts  utils.test.ts  validation.test.ts  wasm-init.d.ts  wasm-init.ts  wasmResourceModelWrapper.test.ts  wkrm.test.ts
utils/: run-all-tests.sh
(+111 files in other folders)
