[workspace]
members = [
    "crates/alizarin-core",
    "crates/alizarin-clm-core",
    "crates/alizarin-wasm",
    "crates/alizarin-python",
    "crates/alizarin-explorer",
    "crates/alizarin-extension-api",
    "crates/alizarin-napi",
    "crates/wasm-wrapper-derive",
]
exclude = [
    "ext/filelist/core",
    "ext/filelist/wasm",
    "ext/filelist/python",
    "ext/python/alizarin-clm",
]
resolver = "2"

[workspace.package]
version = "2.0.0-alpha.113"
authors = ["Phil Weir <phil.weir@flaxandteal.co.uk>"]
edition = "2021"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
# Include debug symbols for better panic backtraces
debug = true

[profile.dev]
# Enable debug symbols for better error messages
debug = true
