[package]
name = "alizarin-clm-core"
version.workspace = true
edition = "2021"
description = "Shared CLM (Controlled List Manager) reference type logic for Alizarin"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
alizarin-core = { path = "../alizarin-core" }
