[package]
name = "alizarin-core"
version = "0.1.0"
authors = ["Phil Weir <phil.weir@flaxandteal.co.uk>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
default = []
parallel = ["rayon"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
rayon = { version = "1.10", optional = true }

[dev-dependencies]
