[package]
name = "alizarin-python"
version = "0.1.0"
authors = ["Phil Weir <phil.weir@flaxandteal.co.uk>"]
edition = "2021"
license = "MIT"

[lib]
name = "alizarin"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
alizarin = { path = "../.." }

[dev-dependencies]
