[package]
name = "alizarin-python"
version = "0.2.1-alpha.6"
authors = ["Phil Weir <phil.weir@flaxandteal.co.uk>"]
edition = "2021"
license = "MIT"

[lib]
name = "alizarin"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "v5"] }
alizarin-core = { path = "../alizarin-core" }
alizarin-extension-api = { path = "../alizarin-extension-api" }
lazy_static = "1.4"
rayon = "1.10"
regex = "1.10"

[dev-dependencies]
