[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "alizarin"
version = "0.1.0"
description = "Python bindings for Alizarin tree conversion"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.maturin]
# Pure Rust extension module, no Python source directory needed
module-name = "alizarin"
