[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "alizarin"
version = "0.1.0"
description = "Python bindings for Alizarin tree conversion"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.maturin]
# Mixed Rust/Python module - include Python source directory
module-name = "alizarin.alizarin"
python-source = "python"
