[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "alizarin"
version = "2.0.0a87"
description = "Python bindings for Alizarin tree conversion"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "click>=8.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0", "pytest-asyncio"]

[project.scripts]
alizarin = "alizarin.cli:main"

[tool.maturin]
# Mixed Rust/Python module - include Python source directory
module-name = "alizarin.alizarin"
python-source = "python"
