[package]
name = "alizarin-clm"
version = "0.1.0"
edition = "2021"
description = "CLM (Controlled List Manager) extension for Alizarin"

[lib]
name = "_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
alizarin-extension-api = { path = "../../../crates/alizarin-extension-api" }
