[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "alizarin-clm"
version = "2.0.0a87"
description = "CLM (Controlled List Manager) extension for Alizarin"
requires-python = ">=3.9"
dependencies = [
    "alizarin>=2.0.0a87",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.maturin]
python-source = "python"
module-name = "alizarin_clm._rust"
features = ["pyo3/extension-module"]
