[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "alizarin-filelist"
version = "0.2.1a50"
description = "File List datatype extension for Alizarin"
requires-python = ">=3.9"
dependencies = [
    "alizarin>=0.2.1a50",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.maturin]
python-source = "python"
module-name = "alizarin_filelist._rust"
features = ["pyo3/extension-module"]
